# sharing_caring

./: .env.example  .gitignore  ADMIN.md  Dockerfile  README.md  README_MVP.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_bot.py  run_dev.py  setup_dev.py  valkey.conf
.claude/: settings.local.json
alembic/: env.py
docker/: init-db.sql
docs/: architecture.md  brief.md  competitor-analysis.md  development-roadmap.md  research-prompt.md
docs/epics/: epic-1-admin-dashboard.md  epic-2-user-registration.md  epic-3-food-posting-discovery.md  epic-4-exchange-coordination-credits.md
docs/legal/: implementation-checklist.md  legal-compliance-assessment.md  privacy-policy-template.md  safety-guidelines.md  terms-of-service-template.md  user-agreement-waiver.md
docs/product/: AI_DEVELOPER_START_HERE.md  DEVELOPMENT_QUEUE_FOR_AI.md  PRD-neighborhood-sharing-platform.md  SPRINT_PLANNING_RECOMMENDATIONS.md
docs/stories/: epic-1-stories.md  epic-2-stories.md  epic-3-stories.md  epic-4-stories.md
docs/technical/: api-specifications.md  system-architecture-diagrams.md  testing-strategy.md
docs/validation/: bot-conversations.md  health-department-call-script.md  lean-validation-project-plan.md  legal-checklist.md  participant-waiver.md  po-master-checklist-results.md  safety-guidelines.md  tracking-spreadsheet-setup.md  user-flows.md  wireframes.md
scripts/: init_db.py  setup_local.sh  start.sh  test.sh
src/: admin_cli.py  main.py
src/api/: main.py
src/bot/: main.py
src/core/: __init__.py  config.py  database.py  logging.py  redis.py
tests/: __init__.py  conftest.py
(+107 files in other folders)
